--- a/ZeiterfassungPierburg/Views/Shared/Error.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/Error.cshtml
@@ -15,7 +15,7 @@
                 </div>
 
                 <h3>
-                    Das ist nicht gelungen. Wahrscheinlich hast du keinen Zugriff oder sie Seite existiert nicht.
+                    Das ist nicht gelungen. Wahrscheinlich existiert die Seite nicht.
                 </h3>
                 <h4>
                     Falls du glaubst, dass etwas nicht stimmt, kontaktiere bitte den Administrator.
