--- a/ZeiterfassungPierburg/Views/Home/Login.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Login.cshtml
@@ -6,44 +6,80 @@
     Layout = "";
 }
 
+
+
+@Styles.Render("~/Content/css")
+@Scripts.Render("~/bundles/modernizr")
+@Scripts.Render("~/bundles/modernizr")
+
+<link href="~/Content/dist/css/AdminLTE.css" rel="stylesheet" />
+<link rel="stylesheet" href="~/Content/dist/css/skins/_all-skins.min.css">
+
+
+
 @using (Html.BeginForm("Login", "Home", FormMethod.Post))
 {
-    <fieldset>
-        <legend>Du musst dich dafür einloggen!</legend>
 
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
-        @if (@ViewBag.Message != null)
-        {
-            <div style="border: 1px solid red">
-                @ViewBag.Message
-                @ViewBag.Login
+
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/adminlte.js"></script>
+
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+
+    {
+        <body class="hold-transition login-page">
+            <div class="login-box">
+                <div class="login-logo">
+                    <a href="../../index2.html"><b>Pierburg Zeiterfassung</b></a>
+                </div>
+                <!-- /.login-logo -->
+                <div class="login-box-body">
+                    <p class="login-box-msg">Melde dich an.</p>
+
+                    <form action="../../index2.html" method="post">
+                        <div class="form-group has-feedback">
+                            @Html.TextBoxFor(a => a.UserName, new { @class = "form-control", @placeholder = "Benutzername" })
+                        </div>
+                        <div class="form-group has-feedback">
+                            @Html.PasswordFor(a => a.Password, new { @class = "form-control", @placeholder = "Passwort", @type = "password" })
+                            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-8">
+                            </div>
+                            <!-- /.col -->
+                            <div class="col-xs-4">
+                                <button type="submit" class="btn btn-primary btn-block btn-flat">Anmelden</button>
+                            </div>
+                            <!-- /.col -->
+                        </div>
+                    </form>
+                </div>
+                <!-- /.login-box-body -->
             </div>
-        }
-        <table>
-            <tr>
-                <td>@Html.LabelFor(a => a.UserName)</td>
-                <td>@Html.TextBoxFor(a => a.UserName)</td>
-                <td>@Html.ValidationMessageFor(a => a.UserName)</td>
-            </tr>
-            <tr>
-                <td>
-                    @Html.LabelFor(a => a.Password)
-                </td>
-                <td>
-                    @Html.PasswordFor(a => a.Password)
-                </td>
-                <td>
-                    @Html.ValidationMessageFor(a => a.Password)
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Login" />
-                </td>
-                <td></td>
-            </tr>
-        </table>
-    </fieldset>
-}  
+            <!-- /.login-box -->
+            <!-- jQuery 3 -->
+            <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+            <!-- Bootstrap 3.3.7 -->
+            <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+            <!-- iCheck -->
+            <script src="../../plugins/iCheck/icheck.min.js"></script>
+            <script>
+                $(function () {
+                    $('input').iCheck({
+                        checkboxClass: 'icheckbox_square-blue',
+                        radioClass: 'iradio_square-blue',
+                        increaseArea: '20%' /* optional */
+                    });
+                });
+            </script>
+        </body>
+    }
+}
+
+
+
+
