--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
@@ -1,5 +1,8 @@
 ﻿@model ZeiterfassungPierburg.Models.NeueZeiterfassung.NeueZeiterfassung
 
+@{ 
+    Layout = "~/Views/Shared/_LayoutPublic.cshtml";
+}
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frm" }))
 {
