--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/CreateMEBA.cshtml
@@ -1,6 +1,10 @@
 ﻿@model ZeiterfassungPierburg.Models.NeuezeiterfassungMEBA.NeuezeiterfassungMEBA
 
 
+@{
+    Layout = "~/Views/Shared/_LayoutPublic.cshtml";
+}
+
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "frm" }))
 {
     @Html.AntiForgeryToken()
@@ -183,7 +187,7 @@
 
         $("#panlage").change(function () {
             var id = $(this).val(); // Use $(this) so you don't traverse the DOM again
-            
+
             var $eles = $(":input[name^='fteil']");
 
             $.getJSON(url, { produktionsanlageID: id }, function (response) {
@@ -287,7 +291,7 @@
             });
         });
         */
-        
+
         }
 
     function RemoveRow() {
