--- a/ZeiterfassungPierburg/Views/Shared/_LayoutAdmin .cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_LayoutAdmin .cshtml
@@ -75,13 +75,12 @@
                             <li>@Html.ActionLink("Übersicht - Bänder", "Index", "MitarbeiterInSchicht")</li>
                             <li>@Html.ActionLink("Übersicht - MEBA  ", "IndexMEBA", "MitarbeiterInSchicht")</li>
                             _____________________________
-                            <!-- <li>@Html.ActionLink("Schichten", "Index", "SchichtInfo")</li>-->
                             <li>@Html.ActionLink("Produktionsanlagen", "Index", "Produktionsanlage")</li>
                             <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
                             <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
                             <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
                             <li>@Html.ActionLink("Produktivität", "Create", "Produktivität")</li>
-                            <!--<li>@Html.ActionLink("Verwaltung", "Index", "Zugriffsrechte")</li>-->
+                            <li>@Html.ActionLink("Verwaltung", "Index", "Zugriffsrechte")</li>
                         </ul>
                         <!-- /.sidebar-menu -->
                     </section>
@@ -89,29 +88,6 @@
                 </aside>
                 <!-- Content Wrapper. Contains page content -->
                 <div class="content-wrapper">
-
-                    <!--
-                    <div class="navbar navbar-inverse navbar-fixed-top">
-                        <div class="container">
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                            </div>
-                            <div class="navbar-collapse collapse">
-                                <ul class="nav navbar-nav">
-                                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-
-                                </ul>
-                                @Html.Partial("_LoginPartial")
-                            </div>
-                        </div>
-                    </div> -->
                     @RenderBody()
 
                 </div>
@@ -136,7 +112,7 @@
     }
     else
     {
-        Response.Redirect("~/Home/Login");}
+        Response.Redirect("~/Zugriffsrechte/Login");}
     }
 </body>
 
