--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Create.cshtml
@@ -1,7 +1,12 @@
 ﻿@model ZeiterfassungPierburg.Models.Zugriffsrechte
 
 
-
+@if (Startup.AccessLayer != 1)
+{
+    Html.RenderPartial("ErrorAccessDenied");
+}
+else
+{
 <section class="content container-fluid">
     <h3> Zugriffsrecht hinzufügen</h3>
 
@@ -20,7 +25,7 @@
                             @Html.ValidationMessageFor(model => model.Benutzername, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    
+
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Zugriffsebene, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -49,4 +54,5 @@
 </section>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+}
 }
