--- a/ZeiterfassungPierburg/Views/Shared/Error.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/Error.cshtml
@@ -21,7 +21,9 @@
                     Falls du glaubst, dass etwas nicht stimmt, kontaktiere bitte den Administrator.
                 </h4>
             </div>
-            </div>
+            <button onclick="goBack()">Zurück auf die vorige Seite</button>
+
+        </div>
     </div>
 </div>
 
@@ -34,3 +36,8 @@
 
     </div>
 </section>
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
