--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ZeiterfassungPierburg.Models.Zugriffsrechte
 
 
-@if (Startup.AccessLayer != 1)
+@if (Convert.ToInt32(Session["AccessLayer"]) != 1)
 {
     Html.RenderPartial("ErrorAccessDenied");
 }
@@ -26,6 +26,13 @@ else
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Zugriffsebene, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -45,9 +52,7 @@ else
                     </div>
                 }
 
-                <div>
-                    @Html.ActionLink("Zurück zur Übersicht", "Index")
-                </div>
+
             </div>
         </div>
     </div>
