--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Edit.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Edit.cshtml
@@ -1,5 +1,12 @@
 ﻿@model ZeiterfassungPierburg.Models.Zugriffsrechte
 
+@if (Convert.ToInt32(Session["AccessLayer"]) != 1)
+{
+    Html.RenderPartial("ErrorAccessDenied");
+}
+else
+{
+
 <section class="content container-fluid">
     <h3> Zugriffsrecht hinzufügen</h3>
 
@@ -20,6 +27,16 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+
+
+                    <div class="form-group">
                         @Html.LabelFor(model => model.Zugriffsebene, htmlAttributes: new { @class = "control-label col-md-2" })
 
                         <div class="col-md-8">
@@ -30,6 +47,7 @@
 
 
 
+
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
                             <input type="submit" value="Hinzufügen" class="btn btn-default" />
@@ -37,13 +55,12 @@
                     </div>
                 }
 
-                <div>
-                    @Html.ActionLink("Zurück zur Übersicht", "Index")
-                </div>
             </div>
         </div>
     </div>
 </section>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+}
+
 }
