--- a/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktivität/Index.cshtml
@@ -1,68 +1,74 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.ViewModels.ProduktivitätViewModel>
 
+@if (Convert.ToInt32(Session["AccessLayer"]) != 1)
+{
+    Html.RenderPartial("ErrorAccessDenied");
+}
+else
+{
+    <section class="content container-fluid">
+        <div class="box-header with-border">
+            <div class="box box-info">
+                <div class="box-header with-border">
+                    <h3>Übersicht der Produktivität</h3>
 
-<section class="content container-fluid">
-    <div class="box-header with-border">
-        <div class="box box-info">
-            <div class="box-header with-border">
-                <h3>Übersicht der Produktivität</h3>
+                    <h5>
+                        Benutzte Filter: <span class="label label-warning"> @ViewBag.Message </span>
 
-                <h5>
-                    Benutzte Filter: <span class="label label-warning"> @ViewBag.Message </span>
-
-                </h5>
-                @if (Model.Any())
-                {
-                @ViewBag.MitarbeiterBeschreibung   <big><big><big>@Html.DisplayFor(modelItem => Model.First().Mitarbeiter)</big></big></big>
-                }
+                    </h5>
+                    @if (Model.Any())
+                    {
+                        @ViewBag.MitarbeiterBeschreibung <big><big><big>@Html.DisplayFor(modelItem => Model.First().Mitarbeiter)</big></big></big>
+                    }
 
 
-                <table id="example" class="table table-striped table-bordered" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Produktionsanlage)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Fertigungsteil)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Produktivität)
-                            </th>
-
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+                    <table id="example" class="table table-striped table-bordered" style="width:100%">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Produktionsanlage)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Fertigungsteil)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Produktivität)
-                                </td>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Produktionsanlage)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Fertigungsteil)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Produktivität)
+                                </th>
 
                             </tr>
-                        }
-                    </tbody>
-                </table>
-                <h4>@ViewBag.MitarbeiterMessage</h4>
-                @Html.ActionLink("Neue Suche", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Produktionsanlage)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Fertigungsteil)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Produktivität)
+                                    </td>
+
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <h4>@ViewBag.MitarbeiterMessage</h4>
+                    @Html.ActionLink("Neue Suche", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
+                </div>
             </div>
         </div>
-    </div>
-</section>
-@section scripts{
-    @Styles.Render("~/bundles/tableStyleBundle")
-    @Scripts.Render("~/bundles/tableScriptBundle")
+    </section>
+    @section scripts{
+        @Styles.Render("~/bundles/tableStyleBundle")
+        @Scripts.Render("~/bundles/tableScriptBundle")
 
-    <script>
-        $(document).ready(function () {
-            $('#example').DataTable();
-        });
-    </script>
+        <script>
+            $(document).ready(function () {
+                $('#example').DataTable();
+            });
+        </script>
+    }
 }
