--- a/ZeiterfassungPierburg/Views/Shared/Error.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/Error.cshtml
@@ -1,41 +1,32 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
+    Layout = "";
     ViewBag.Title = "Error";
 }
 
+<section class="content">
 
-<div class="container h-100">
-    <div class="row align-items-center h-100">
-        <div class="col-6 mx-auto">
-            <div class="jumbotron">
-                <div class="col-6 mx-auto">
+    <div class="error-page">
+        <h2 class="headline text-red">☹</h2>
 
-                    <h1><big><big><big><big><big><big><big>☹</big></big></big></big>   </big></big></big></h1>
-                </div>
+        <div class="error-content">
+            <h3><i class="fa fa-warning text-red"></i> Uuups, das ist nicht gelungen. Wahrscheinlich existiert die Seite nicht.</h3>
 
-                <h3>
-                    Das ist nicht gelungen. Wahrscheinlich existiert die Seite nicht.
-                </h3>
-                <h4>
-                    Falls du glaubst, dass etwas nicht stimmt, kontaktiere bitte den Administrator.
-                </h4>
-            </div>
-            <button onclick="goBack()">Zurück auf die vorige Seite</button>
+            <p>
+                Falls du glaubst, dass etwas nicht stimmt, kontaktiere bitte den Administrator.
 
+            </p>
+
+            <p>
+                <button class="btn-toolbar" onclick="goBack()">Zurück auf die vorige Seite</button>
+            </p>
         </div>
     </div>
-</div>
+    <!-- /.error-page -->
 
-<section class="content container-fluid">
-    <div class="container d-flex h-100">
-        <div class="row justify-content-center align-self-center">
-            
-        </div>
-
-
-    </div>
 </section>
+
 <script>
     function goBack() {
         window.history.back();
