--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Index.cshtml
@@ -1,62 +1,69 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.Zugriffsrechte>
 
+@if (Convert.ToInt32(Session["AccessLayer"]) != 1)
+{
+    Html.RenderPartial("ErrorAccessDenied");
+}
+else
+{
 
-<section class="content container-fluid">
-    <div class="box-header with-border">
-        <div class="box box-info">
-            <div class="box-header with-border">
-                <h3>Übersicht der Zugriffsrechte</h3>
-                <h5 style=" color:red">Hinweis: Wenn du deine Rechte löschst, kannst du sie dir selber nicht mehr zuteilen.</h5>
-                <h5 >1 = Admin</h5>
-                <h5 style="padding-bottom: 25px ">2 = Verwalter (kann nicht Rechte zuteilen)</h5>
-                <table id="example" class="table table-striped table-bordered" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Benutzername)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Zugriffsebene)
-                            </th>
-
-                            <th>
-
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+    <section class="content container-fluid">
+        <div class="box-header with-border">
+            <div class="box box-info">
+                <div class="box-header with-border">
+                    <h3>Übersicht der Zugriffsrechte</h3>
+                    <h5 style=" color:red">Hinweis: Wenn du deine Rechte löschst, kannst du sie dir selber nicht mehr zuteilen.</h5>
+                    <h5>1 = Admin</h5>
+                    <h5 style="padding-bottom: 25px ">2 = Verwalter (kann nicht Rechte zuteilen)</h5>
+                    <table id="example" class="table table-striped table-bordered" style="width:100%">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Benutzername)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Zugriffsebene)
-                                </td>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Benutzername)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Zugriffsebene)
+                                </th>
 
-                                <td>
-                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                                </td>
+                                <th>
+
+                                </th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
-                <h4>@ViewBag.MitarbeiterMessage</h4>
-                @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Benutzername)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Zugriffsebene)
+                                    </td>
+
+                                    <td>
+                                        @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                        @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <h4>@ViewBag.MitarbeiterMessage</h4>
+                    @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
+                </div>
             </div>
         </div>
-    </div>
-</section>
-@section scripts{
-    @Styles.Render("~/bundles/tableStyleBundle")
-    @Scripts.Render("~/bundles/tableScriptBundle")
+    </section>
+    @section scripts{
+        @Styles.Render("~/bundles/tableStyleBundle")
+        @Scripts.Render("~/bundles/tableScriptBundle")
 
-    <script>
-        $(document).ready(function () {
-            $('#example').DataTable();
-        });
-    </script>
-}
+        <script>
+            $(document).ready(function () {
+                $('#example').DataTable();
+            });
+        </script>
+    }
+    }
 
