add access layer control for delete
calculate productivity correctly

dismiss windows authentication in controllers

--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -67,9 +67,10 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Bemerkung)
                             </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Auswertung)
-                            </th>
+                            <!--<td>
+        @Html.DisplayFor(modelItem => item.Auswertung)%
+    </td>
+        -->
 
                             <th></th>
                         </tr>
