--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 
         @if (Session["UserName"] != null)
         {<text>
-                <h1>  Herzlich willkommen @Session["UserName"].ToString() !</h1></text>
+                <h1>  Herzlich willkommen @Session["UserName"].ToString()!</h1></text>
     }
     </fieldset>
 
@@ -131,7 +131,7 @@
 
         <div class="col-lg-3 col-xs-6">
             <div class="box-footer text-black">
-                <h4 style="padding-bottom: 20px;">Produktivität gesamt - Bänder</h4>
+                <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Bänder</h4>
                 <div class="row">
                     <div class="col-sm-12">
                         <!-- Progress bars -->
@@ -143,7 +143,7 @@
             </div>
             <div class="box-footer text-black">
 
-                <h4 style="padding-bottom: 20px;">Produktivität gesamt - Maschinen</h4>
+                <h4 style="padding-bottom: 20px;">Produktivität im letzten Monat - Maschinen</h4>
 
                 <div class="row">
                     <div class="col-sm-12">
@@ -276,7 +276,7 @@
             // Maschinen Produktivität Berechnung
 
             var htmlMaschinen = '';
-                            var dictionaryMaschinen = @Html.Raw(Json.Encode(ViewBag.ProduktivitätMaschinen));
+                            var dictionaryMaschinen = @Html.Raw(Json.Encode(ViewBag.ProduktivitätBerechnungProMaschineLastMonth));
             for (var key in dictionaryMaschinen ){
                 var value = dictionaryMaschinen[key];
 
